src/main/kotlin/icu/windea/pls/cwt/Cwt.bnf
// Copyright (c) 2021 DragonKnightOfBreeze Windea <dk_breeze@qq.com>
// All rights reserved.

// Grammar for CWT.

{
  parserImports="static com.intellij.lang.WhitespacesBinders.*"
  parserClass="icu.windea.pls.cwt.parser.CwtParser"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"
  psiClassPrefix="Cwt"
  psiImplClassSuffix="Impl"
  psiPackage="icu.windea.pls.cwt.psi"
  psiImplPackage="icu.windea.pls.cwt.psi.impl"
  elementTypeHolderClass="icu.windea.pls.cwt.psi.CwtElementTypes"
  tokenTypeFactory="icu.windea.pls.cwt.psi.CwtElementTypeFactory.getTokenType"
  elementTypeFactory="icu.windea.pls.cwt.psi.CwtElementTypeFactory.getElementType"
  psiImplUtilClass="icu.windea.pls.cwt.psi.impl.CwtPsiImplUtil"
  parserUtilClass="icu.windea.pls.cwt.parser.CwtParserUtil"
  methods(".*")=[getResolveScope getUseScope getPresentation toString]
  tokens=[
    EOL="<eol>"
  ]
}

// common rules

root ::= root_block?

private general_comment ::= doc_comment | option_comment | comment
doc_comment ::= DOC_COMMENT_TOKEN {
  name="doc comment"
  implements=["com.intellij.psi.PsiDocCommentBase"]
  methods=[getTokenType getOwner]
}
option_comment ::= option_comment_root {
  name="option comment"
  implements=["com.intellij.psi.PsiComment"]
  methods=[getTokenType optionList="option" optionValueList="value"]
}
private comment ::= COMMENT {
  name="comment"
}

root_block ::= root_block_items {
  hooks=[wsBinders="GREEDY_LEFT_BINDER, GREEDY_RIGHT_BINDER"] // surrounding whitespaces and comments are greedy
  implements=[
    "icu.windea.pls.core.psi.PsiRootBlock"
    "icu.windea.pls.cwt.psi.CwtMemberContainer"
  ]
  methods=[
    getMemberContainer getMembers
    getValue getComponents
  ]
}
private root_block_items ::= root_block_item+
private root_block_item ::= general_comment | property | value {
  // recoverWhile="#auto" // continue parsing
  recoverWhile=root_block_item_recover // continue parsing
}
private root_block_item_recover ::= !( COMMENT | OPTION_COMMENT_START | DOC_COMMENT_TOKEN
  | BOOLEAN_TOKEN | INT_TOKEN | FLOAT_TOKEN | STRING_TOKEN | PROPERTY_KEY_TOKEN
  | LEFT_BRACE | RIGHT_BRACE
  )

// within option comment rules
// 2.0.7 DO NOT use lazy-parsing due to performance reasons

private option_comment_root ::= OPTION_COMMENT_START option_comment_items? {
  pin=1
}
private option_comment_items ::= option_comment_item+
// EOL is recognized by a dedicated lexer token
private option_comment_item ::= <<checkEol>> ( option | option_value ) {
  // recoverWhile="#auto" // continue parsing
  recoverWhile=option_comment_item_recover // continue parsing
}
private option_comment_item_recover ::= !( COMMENT | OPTION_COMMENT_START | DOC_COMMENT_TOKEN
  | BOOLEAN_TOKEN | INT_TOKEN | FLOAT_TOKEN | STRING_TOKEN | PROPERTY_KEY_TOKEN | OPTION_KEY_TOKEN
  | LEFT_BRACE | RIGHT_BRACE
  )

option ::= option_key option_separator option_value {
  name="option"
  pin=1
  implements=[
    "icu.windea.pls.cwt.psi.CwtNamedElement"
    "icu.windea.pls.cwt.psi.CwtOptionMember"
  ]
  methods=[
    option_key="option_key" option_value="value"
    getIcon getName setName getNameIdentifier getValue getPresentableText
  ]
}
option_key ::= option_key_content {
  name="option key"
  implements=[
    "com.intellij.psi.NavigatablePsiElement"
    "icu.windea.pls.core.psi.PsiQuoteAwareElement"
  ]
  methods=[
    getIcon getName getValue getQuotePattern
  ]
}
// NOTE 3.0.2 DO NOT split out quote tokens (reduced complexity, better performance)
private option_key_content ::= OPTION_KEY_TOKEN
private option_separator ::= EQUAL_SIGN | NOT_EQUAL_SIGN | DOUBLE_EQUAL_SIGN
private option_value ::= value {
  name="option value"
}

// property rules

property ::= property_key property_separator property_value {
  name="property"
  pin=1
  implements=[
    "icu.windea.pls.cwt.psi.CwtNamedElement"
    "icu.windea.pls.cwt.psi.CwtMember"
  ]
  methods=[
    getMemberContainer getMembers propertyKey="property_key" propertyValue="value"
    getIcon getName setName getNameIdentifier getValue getPresentableText
  ]
}
property_key ::= property_key_content {
  name="property key"
  implements=[
    "icu.windea.pls.core.psi.PsiQuoteAwareElement"
    "icu.windea.pls.cwt.psi.CwtLiteralValue"
    "icu.windea.pls.cwt.psi.CwtStringExpressionElement"
  ]
  methods=[
    getIcon getName getValue setValue setContent getPresentableText getQuotePattern
    getReference getReferences
  ]
}
// NOTE 3.0.2 DO NOT split out quote tokens (reduced complexity, better performance)
private property_key_content ::= PROPERTY_KEY_TOKEN
private property_separator ::= EQUAL_SIGN | NOT_EQUAL_SIGN | DOUBLE_EQUAL_SIGN
private property_value ::= value {
  name="property value"
}

// value rules

value ::= boolean | int | float | string | block {
  name="value"
  implements=[
    "icu.windea.pls.cwt.psi.CwtExpressionElement"
    "icu.windea.pls.cwt.psi.CwtMember"
    "icu.windea.pls.cwt.psi.CwtOptionMember"
  ]
  methods=[
    getIcon getName getValue setValue setContent getPresentableText
  ]
}

boolean ::= BOOLEAN_TOKEN {
  name="boolean"
  extends=value
  implements=[
    "icu.windea.pls.cwt.psi.CwtLiteralValue"
  ]
}
int ::= INT_TOKEN {
  name="int"
  extends=value
  implements=[
    "icu.windea.pls.cwt.psi.CwtLiteralValue"
    "icu.windea.pls.cwt.psi.CwtNumberExpressionElement"
  ]
}
float ::= FLOAT_TOKEN {
  name="float"
  extends=value
  implements=[
    "icu.windea.pls.cwt.psi.CwtLiteralValue"
    "icu.windea.pls.cwt.psi.CwtNumberExpressionElement"
  ]
}

string ::= string_content {
  name="string"
  extends=value
  implements=[
    "icu.windea.pls.core.psi.PsiQuoteAwareElement"
    "icu.windea.pls.cwt.psi.CwtNamedElement"
    "icu.windea.pls.cwt.psi.CwtLiteralValue"
    "icu.windea.pls.cwt.psi.CwtStringExpressionElement"
  ]
  methods=[
    getIcon getName setName getNameIdentifier getValue setValue setContent getPresentableText getQuotePattern
    getReference getReferences
  ]
}
// NOTE 3.0.2 DO NOT split out quote tokens (reduced complexity, better performance)
private string_content ::= STRING_TOKEN

block ::= LEFT_BRACE block_items? RIGHT_BRACE {
  pin=1
  extends=value
  implements=[
    "icu.windea.pls.cwt.psi.CwtMemberContainer"
    "icu.windea.pls.cwt.psi.CwtBoundMemberContainer"
  ]
  methods=[
    getMemberContainer getMembers getLeftBound getRightBound
    getIcon getValue getComponents getPresentableText
  ]
}
private block_items ::= block_item+
private block_item ::= general_comment | option | property | value {
  // recoverWhile="#auto" // continue parsing
  recoverWhile=block_item_recover // continue parsing
}
private block_item_recover ::= !( COMMENT | OPTION_COMMENT_START | DOC_COMMENT_TOKEN
  | BOOLEAN_TOKEN | INT_TOKEN | FLOAT_TOKEN | STRING_TOKEN | PROPERTY_KEY_TOKEN | OPTION_KEY_TOKEN
  | LEFT_BRACE | RIGHT_BRACE
  )
